--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
-    "onoff": "^6.0.3"
+    "onoff": "^6.0.3",
+    "rpio": "^2.4.2"
   }
 }
